include og:description

--- a/social_tags/templates/social_tags/networks/opengraph.html
+++ b/social_tags/templates/social_tags/networks/opengraph.html
@@ -2,6 +2,7 @@
 {# obligatory tags #}
 {% if title %}<meta property="og:title" content="{{ title }}" />{% endif %}
 {% if type %}<meta property="og:type" content="{{ type }}" />{% endif %}
+{% if description %}<meta property="og:description" content="{{ description }}" />{% endif %}
 {% if image %}<meta property="og:image" content="{{ image }}" />{% endif %}
 {% if url %}<meta property="og:url" content="{{ url }}" />{% endif %}
 
